# Wassla

./: .gitignore  README.md  application.py  openvla.ipynb  requirements.txt
app/: main.py
app/api/api_v1/: router.py
app/api/api_v1/handlers/: Dashboard.py
app/core/: config.py
app/data/: data.json
app/research/: CoinMarketCap.ipynb  app.py  meteostat.ipynb
app/services/: GetData.py
backend/: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/api_v1/: router.py
backend/app/api/api_v1/handlers/: authentication.py  comments.py  dashboard.py  likes.py  posts.py  users.py
backend/app/core/: config.py
backend/app/database/: neo4j_db.py  postgres_db.py
backend/app/models/: neo4j_models.py  postgres_models.py
backend/app/research/: CoinMarketCap.csv
backend/app/schemas/: auth_schemas.py  comments_schemas.py  likes_schemas.py  posts_schemas.py  user_schemas.py
backend/app/services/: GetData.py  application.py  auth_service.py
